// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentTimeline props avatarIcon is rendered 1`] = `
<div
  aria-label="someuser"
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user-subdued"
  role="img"
  title="someuser"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="dot"
  >
    someuser
  </span>
</div>
`;

exports[`EuiCommentTimeline props avatarName is rendered 1`] = `
<div
  aria-label="avatar name"
  class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#79aad9;color:#000000"
  title="avatar name"
>
  <span
    aria-hidden="true"
  >
    an
  </span>
</div>
`;

exports[`EuiCommentTimeline props timelineAvatarProps is rendered 1`] = `
<div
  aria-label="someuser"
  class="euiAvatar euiAvatar--s euiAvatar--user euiCommentAvatar emotion-euiAvatar-s-user"
  role="img"
  style="background-color:#ffff00;color:#000000"
  title="someuser"
>
  <span
    aria-hidden="true"
  >
    s
  </span>
</div>
`;
